FIX: form vertical alignment now calculated wrt banner

--- a/src/frontend/css/tableStyles.css
+++ b/src/frontend/css/tableStyles.css
@@ -301,6 +301,7 @@ h1 {
    /* background-color: #009879c7;*/
 
 
+    height:55px;
  background-color: #0b5259;
 
 
